Fixed Header overflow-x

--- a/Three Musketeers/style.css
+++ b/Three Musketeers/style.css
@@ -253,7 +253,8 @@ ul {
 body {
     line-height: 1.5;
     color: rgb(215, 27, 27);
-    font-family: Lato, sans-serif
+    font-family: Lato, sans-serif;
+    overflow-x: hidden;
 }
 
 a {
